Fix contrast for Dark Theme form_alternate_row

--- a/include/themes/dark/main.css
+++ b/include/themes/dark/main.css
@@ -500,6 +500,7 @@ label {
 	background: none repeat scroll 0 0 #080808;
 	border: none;
 	box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+	background-color: #333131;
 }
 
 .even {
